correct footer align

--- a/5-calculator/style.css
+++ b/5-calculator/style.css
@@ -269,3 +269,9 @@ footer {
     margin-bottom: 1.5rem;
   }
 }
+
+@media (max-width: 409px) {
+  footer p {
+    text-align: center;
+  }
+}
